@@ -12,6 +12,7 @@
 \usepackage{extramarks}
 \usepackage{color}
 \usepackage[colorlinks=true,urlcolor=blue,linkcolor=blue]{hyperref}
+\usepackage{ifthen}
 
 \pagestyle{fancy}
 \renewcommand{\sectionmark}[1]{\markboth{\thesection.\ #1}{}}
@@ -24,6 +25,11 @@
 
 % Display commands, arguments, etc. in texttt font and don't break those.
 \newcommand{\cmd}[1]{\mbox{\texttt{#1}}}
+
+% Only show text if configured with a feature
+\newcommand{\ifthen}[2]{\ifthenelse{\equal{#1}{1}}{#2}{}}
+\newcommand{\ifcmdsubmit}[1]{\ifthen{\ENABLECMDSUBMITSERVER}{#1}}
+\newcommand{\ifwebsubmit}[1]{\ifthen{\ENABLEWEBSUBMITSERVER}{#1}}
 
 % Our titlepage, should be called at start of team manual document
 % Argument list:
@@ -67,7 +73,7 @@
   % First for fancy page style:
   \setupfancystuff
   \fancyhead[RO,LE]{\slshape \firstleftmark}
-  
+
   % No headers for plain page style (titlepage):
   \fancypagestyle{plain}{%
     \setupfancystuff
