@@ -8,6 +8,7 @@ Version 3.1.0 - SVN
  - Fix error trapping in subshells, thanks Jan Jergus. (Closes: #2866430)
  - Fix bug in lib.database.php with array_map "class::method" notation.
  - Add 'enabled' field to contest to allow for easier editing.
+ - Only show the configured submission methods in the team manual.
 
 Version 3.0.0 Release Candidate 2 - 3 September 2009
 ----------------------------------------------------
